# KuromiOS

./: .gitignore  CMakeLists.txt  clean.sh  config.sh  iso.sh  qemu.sh  wsl_setup.sh
kernel/: Makefile
kernel/arch/i386/: boot.S  gdt.c  idt.c  linker.ld  load_gdt.S  load_idt.S  make.config  tty.c
kernel/arch/i386/mm/: heap.c  paging.S  pmm.c  vmm.c
kernel/include/kernel/: debug.h  gdt.h  heap.h  idt.h  pmm.h  tty.h  vga.h  vmm.h
kernel/kernel/: kernel.c
libc/: Makefile
libc/include/: stdint.h  stdlib.h
libc/include/sys/: cdefs.h  io.h
libc/stdio/: printf.c
libc/stdlib/: free.c  malloc.c
